--- a/package.json
+++ b/package.json
@@ -3,5 +3,20 @@
   "version": "1.0.0",
   "main": "src/index.js",
   "author": "gustadsg@outlook.com.br <gustadsg@outlook.com.br>",
-  "license": "MIT"
+  "license": "MIT",
+  "scripts": {
+    "commit": "cz"
+  },
+  "devDependencies": {
+    "@commitlint/cli": "^13.2.1",
+    "@commitlint/config-conventional": "^13.2.0",
+    "commitizen": "^4.2.4",
+    "cz-conventional-changelog": "3.3.0",
+    "husky": "^7.0.2"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
+  }
 }
