--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,7 +4,7 @@
     "es2021": true,
     "node": true
   },
-  "extends": ["airbnb-base", "pettier"],
+  "extends": ["airbnb-base", "prettier"],
   "plugins": ["prettier"],
   "parserOptions": {
     "ecmaVersion": 13
