--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
     "husky": "^7.0.2",
-    "prettier": "^2.4.1"
+    "prettier": "^2.4.1",
+    "sequelize-cli": "^6.2.0"
   },
   "config": {
     "commitizen": {
