--- a/package.json
+++ b/package.json
@@ -28,10 +28,13 @@
   },
   "dependencies": {
     "cors": "^2.8.5",
+    "cpf-cnpj-validator": "^1.0.3",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.22.1",
     "express": "^4.17.1",
     "sequelize": "^6.7.0",
-    "uuid": "^8.3.2"
+    "sqlite3": "^5.0.2",
+    "uuid": "^8.3.2",
+    "validator": "^13.6.0"
   }
 }
