chore(dependencies): install dependencies

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -11,6 +11,7 @@
   },
   "rules": {
     "prettier/prettier": ["error"],
-    "no-unused-vars": "warn"
+    "no-unused-vars": "warn",
+    "class-methods-use-this": "off"
   }
 }
