--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "commit": "cz",
     "lint": "eslint --cache --fix --ext .js src/",
-    "start": "node src/index.js"
+    "start": "node src/index.js",
+    "dev": "nodemon src/index.js"
   },
   "devDependencies": {
     "@commitlint/cli": "^13.2.1",
@@ -18,6 +19,7 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
     "husky": "^7.0.2",
+    "nodemon": "^2.0.14",
     "prettier": "^2.4.1",
     "sequelize-cli": "^6.2.0"
   },
@@ -30,9 +32,11 @@
     "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
     "cpf-cnpj-validator": "^1.0.3",
+    "dotenv": "^10.0.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.22.1",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "sequelize": "^6.7.0",
     "sqlite3": "^5.0.2",
     "uuid": "^8.3.2",
