--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
     "cpf-cnpj-validator": "^1.0.3",
+    "date-fns": "^2.25.0",
     "dotenv": "^10.0.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.22.1",
